--- a/guess.css
+++ b/guess.css
@@ -536,3 +536,25 @@ input[type="number"] {
 #extraGameButton:hover {
    background-color: #45a049; /* Slightly darker green color on hover */
 }
+
+#grid-container {
+    display: flex;
+    flex-direction: row; /* 横向排列 */
+    align-items: center;
+    flex-wrap: nowrap; /* 阻止换行 */
+}
+.grid-cell {
+    width: 20px;
+    height: 20px;
+    background-color: #444;
+    margin: 0;
+    border: 1px solid #000;
+    transition: background-color 0.3s;
+}
+.grid-cell.green {
+    background-color: green;
+}
+#griddisplay {
+    margin-top: 20px;
+    font-size: 18px;
+}
