--- a/puzzle.css
+++ b/puzzle.css
@@ -27,6 +27,8 @@ border-radius: 4px; /* 圆角边框 */
 #randomSeedButton,
 #restartButton,
 #useSeedButton,
+#reverseButton,
+#undoButton,
 #link-button {
   width: auto; /* 调整按钮的宽度 */
   padding: 8px; /* 调整内边距 */
@@ -42,6 +44,8 @@ border-radius: 4px; /* 圆角边框 */
 #randomSeedButton:hover,
 #restartButton:hover,
 #useSeedButton:hover,
+#reverseButton:hover,
+#undoButton:hover,
 #link-button:hover {
   background-color: #0056b3;
 }
@@ -71,6 +75,7 @@ border-radius: 4px; /* 圆角边框 */
     flex-direction: column;
     align-items: center;
     justify-content: flex-start;
+    display: none
 }
 
 #path {
@@ -209,4 +214,10 @@ a:hover {
     white-space: pre-wrap;
     height: 200px; /* 设置固定高度 */
     overflow-y: auto; /* 启用垂直滚动条 */
+}
+
+.highlight {
+  background-color: transparent; /* 可选，如果不希望有背景颜色 */
+  box-shadow: 0 0 10px green, inset 0 0 10px green;
+  transition: box-shadow 0.5s ease-in-out;
 }
