--- a/kmr/styles.css
+++ b/kmr/styles.css
@@ -4,6 +4,7 @@ body {
     justify-content: center;
     align-items: center;
     height: 100vh;
+    overflow: hidden;
     background-color: #f0f0f0;
 }
 
@@ -128,18 +129,22 @@ body {
 .details-container {
     margin-top: 20px;
     width: 25%;
+    max-height: 100vh; /* 最大高度为视窗高度的90% */
+    overflow-y: auto; /* 允许垂直滚动 */
 }
 
 .stats-container {
     margin-top: 20px;
-    width: 15%;
+    width: 20%;
+    max-height: 100vh; /* 最大高度为视窗高度的90% */
+    overflow-y: auto; /* 允许垂直滚动 */
 }
 
 .game-container {
     margin: 20px;
     text-align: center;
     font-family: Arial, sans-serif;
-    width: 60%;
+    width: 55%;
     max-height: 100vh; /* 最大高度为视窗高度的90% */
     overflow-y: auto; /* 允许垂直滚动 */
 }
@@ -225,4 +230,38 @@ button:active {
 button:disabled {
     background-color: #CCCCCC; /* 灰色背景 */
     cursor: not-allowed;
+}
+
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 1000;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0, 0, 0, 0.4);
+}
+
+.modal-content {
+    background-color: white;
+    margin: 15% auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%;
+}
+
+.close {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
 }
